<resources>
    <string name="app_name">Udemy</string>
    <string name="foodmarket">FoodMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_address">Email Address</string>
    <string name="type_your_email">Type your email</string>
    <string name="password">password</string>
    <string name="type_your_password">Type your password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_new_account">Create New Account</string>
    <string name="full_name">Full Name</string>
    <string name="type_your_full_name">Type your full name</string>
    <string name="continues">Continue</string>
    <string name="phone_no">Phone No.</string>
    <string name="type_your_phone_number">Type your phone number</string>
    <string name="address">Address</string>
    <string name="type_your_address">Type your address</string>
    <string name="house_no">House No.</string>
    <string name="type_your_house_number">Type your house number</string>
    <string name="city">City</string>
    <string name="type_your_city">Type your city</string>
    <string name="sign_up_now">Sign up now</string>
    <string name="yeay_completed">Yeay ! completed</string>
    <string name="now_you_are_able_to_order_some_foods_as_a_self_reward">Now you are able to order\n some foods as a self reward</string>
    <string name="find_foods">Find Foods</string>
</resources>