<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF"
    android:layout_marginTop="24dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="26dp"
    android:orientation="vertical"
    tools:context=".ui.authentication.signin.SigninFragment">

    <TextView
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email_address" />

    <EditText
        android:inputType="text"
        android:hint="@string/type_your_email"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        android:background="@drawable/field_rectangle"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:padding="10dp"
        android:inputType="textPassword"
        android:hint="@string/type_your_password"
        android:background="@drawable/field_rectangle"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
    <Button
        android:id="@+id/btnSignIn"
        android:layout_marginTop="24dp"
        android:textAllCaps="false"
        android:backgroundTint="#FFC700"
        android:textColor="#202020"
        android:fontFamily="@font/poppins"
        android:text="@string/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/btnSignUp"
        android:text="@string/create_new_account"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:textColor="#FFF"
        android:layout_marginTop="12dp"
        android:backgroundTint="#ABABAB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    
</LinearLayout>