<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.authentication.signup.SignupFragment">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="26dp"
        android:background="#FFF"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/imageViewAddPhoto"
        android:layout_gravity="center"
        android:src="@drawable/default_image"
        android:layout_width="110dp"
        android:layout_height="110dp"/>

    <TextView
        android:layout_marginTop="16dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:text="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextFullName"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/field_rectangle"
        android:layout_marginTop="6dp"
        android:padding="10dp"
        android:hint="@string/type_your_full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:paddingTop="6dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:text="@string/email_address"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/field_rectangle"
        android:hint="@string/type_your_email"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:paddingTop="6dp"
        style="@style/TextView.PoppinsNormal16sp020202"
        android:layout_width="match_parent"
        android:text="@string/password"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/editTextPassword"
        style="@style/EditText.PoppinsNormal14sp8D92A3"
        android:background="@drawable/field_rectangle"
        android:hint="@string/type_your_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginTop="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/buttonContinue"
        android:backgroundTint="#FFC700"
        android:layout_marginTop="24dp"
        android:text="@string/continues"
        android:fontFamily="@font/poppins"
        android:textColor="#202020"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>